--- a/Backend/Config/config.env
+++ b/Backend/Config/config.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
-ПОРТ =5000
+PORT =5000
 URI =http://localhost:3000
 MONGO_URI =mongodb://10.100.3.210/20075_pinstory
 JWT_SECRET_KEY = secretkey
